Try fix contrast issue with price

--- a/blocks/product-comparison-table/product-comparison-table.css
+++ b/blocks/product-comparison-table/product-comparison-table.css
@@ -4,7 +4,7 @@
     --yes-check-color: #78b13f;
     --no-check-color: #fb0000;
     --column-header-highlight-color: #de2985;
-    --product-comparison-text-color: #7e7e7e;
+    --product-comparison-text-color: #5d5c5c;
 }
 
 .product-comparison-table-container {
@@ -223,7 +223,7 @@
     .product-comparison-header div[role="columnheader"] h4 {
         font-size: var(--heading-font-size-m);
     }
-    
+
     .product-comparison-table div[role='cell'] {
         display: table-cell;
 
